# logger

./: .gitignore  Cargo.toml  README.md  README_CN.md  Taskfile.yml  pixi.toml  recipe.yml
examples/: basic.mojo  basic_logging.mojo  file_logging.mojo  levels_demo.mojo  logger.mojo  logger_basic.mojo
examples/try-spdlog/: pixi.toml
recipes/: mojo-recipe.yaml  rs-recipe.yaml
spdlog/: __init__.mojo  logger.mojo
spdlog-ffi/: Cargo.toml  cffi.h
spdlog-ffi/src/: ffi.rs
tests/: test_spdlog.mojo
